[package]
name = "bigquery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fluvio-model-bigquery = {path= "../../models/fluvio-model-bigquery" }
fluvio-connectors-common = { path = "../../common", features = ["sink"]}
fluvio-future = { version = "0.4.1" , features = ["subscriber"]}
fluvio-smartengine = { version = "0.6.0" }
fluvio-smartmodule = { version = "0.4.0" }
fluvio-spu-schema = { version = "0.12", default-features = false }
fluvio = { version = "0.17" }
